docs-archive/apache-airflow-providers-edge3/4.2.0/_sources/_api/airflow/providers/edge3/models/db/index.rst.txt
airflow.providers.edge3.models.db
=================================

.. py:module:: airflow.providers.edge3.models.db


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.models.db.PACKAGE_DIR


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.models.db.EdgeDBManager


Functions
---------

.. autoapisummary::

   airflow.providers.edge3.models.db.check_db_manager_config


Module Contents
---------------

.. py:data:: PACKAGE_DIR

.. py:class:: EdgeDBManager(session)

   Bases: :py:obj:`airflow.utils.db_manager.BaseDBManager`


   Manages Edge3 provider database tables.


   .. py:attribute:: metadata


   .. py:attribute:: version_table_name
      :value: 'alembic_version_edge3'



   .. py:attribute:: migration_dir


   .. py:attribute:: alembic_file


   .. py:attribute:: supports_table_dropping
      :value: True



   .. py:attribute:: revision_heads_map


   .. py:method:: upgradedb(to_revision=None, from_revision=None, show_sql_only=False, use_migration_files=False)

      Upgrade the database, handling pre-alembic installations on older Airflow versions.



   .. py:method:: initdb(use_migration_files = False)

      Initialize the database, handling pre-alembic installations.

      If the edge3 tables already exist but the alembic version table does not
      (e.g. created via create_all before the migration chain was introduced),
      stamp to the first revision and run the incremental upgrade so every
      migration is applied rather than jumping straight to head.



   .. py:method:: drop_tables(connection)

      Drop only edge3 tables in reverse dependency order.



.. py:function:: check_db_manager_config()

   Warn if EdgeDBManager is not registered to run DB migrations.

   Should be called whenever the edge3 provider is active so operators are alerted
   early if the required database configuration is missing.


